fix task sort